--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -143,9 +143,9 @@
                 <small ng-show="userMoreThanTask"><i style="color: red;">จำนวนผู้รับงานมากเกินไป</i></small></h4>
             </div>
             <div class="modal-body">            	    	
-            	<div class="row" style="max-height: 480px; overflow-y: auto; scrollbar-arrow-color:blue; 
+            	<div class="row" style="max-height: 385px; overflow-y: auto; scrollbar-arrow-color:blue; 
             							scrollbar-face-color: #e7e7e7; scrollbar-3dlight-color: #a0a0a0; 
-            							scrollbar-darkshadow-color:#888888">
+            							scrollbar-darkshadow-color:#888888; margin-bottom: 10px;">
 					<div class="col-lg-12">
 						<ul class="list-group">
 						  <li class="list-group-item" ng-repeat="u in users track by $index" style="height: 33px;">
@@ -158,9 +158,9 @@
 					</div>
             	</div>
             	
-            	<div class="row">
-		            <div class="col-lg-12">
-		            	<form class="form-inline">
+            	<div class="panel panel-default" style="margin-bottom: 0px;">
+				  <div class="panel-body">
+				   	<form class="form-inline">
 			            	<div class="form-group">
 								<select name="column" class="form-control" ng-model="formData.methodId" ng-options="option.id as option.methodName for option in assignMethods">
 									<option value="">-- เลือกวิธีจ่ายงาน --</option>
@@ -171,13 +171,15 @@
 									<option value="">-- เลือกคอลัมน์ Balance --</option>
 						  		</select>
 					    	</div>
+						    <div class="form-group">
+						    	&nbsp;&nbsp;&nbsp;<code><i><u>จำนวนงานมี {{ countSelected }} เคส</u></i></code>
+						    </div>
 					    </form>
-		            </div>
-	            </div>
+				  </div>
+				</div>
             </div>
            	<div class="modal-footer">
            		<label class="pull-left"><input type="checkbox" ng-model="isSelectAllUsers" ng-change="selectAllUsersCheckBox()"> เลือกทั้งหมด</label>
-           		<i><u>จำนวนงานมี {{ countSelected }} เคส</u></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<button type="button" class="btn btn-default" ng-click="dismissModal()">ปิด</button>
                 <button type="button" class="btn btn-primary" ng-click="taskAssigningBySelected()" ng-disabled="!isOneSelected || !formData.methodId || !formData.calColumn || numColumn.length == 0">ตกลง</button>
 			</div>
