--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -55,7 +55,7 @@
 							   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 							   
 							   <div class="pull-right">
-								  <button type="button" ng-click="showCollector()" class="btn btn-outline btn-primary">จ่ายงาน/โอนงาน</button>
+								  <button type="button" ng-click="showCollector2()" class="btn btn-outline btn-primary">จ่ายงาน/โอนงาน</button>
 							   </div>
 							</form>
 						</div>
@@ -181,6 +181,83 @@
            	<div class="modal-footer">
            		<label class="pull-left"><input type="checkbox" ng-model="isSelectAllUsers" ng-change="selectAllUsersCheckBox()"> เลือกทั้งหมด</label>
 				<button type="button" class="btn btn-default" ng-click="dismissModal()">ปิด</button>
+                <button type="button" class="btn btn-primary" ng-click="taskAssigningBySelected()" ng-disabled="!isOneSelected || !formData.methodId || !formData.calColumn || numColumn.length == 0">ตกลง</button>
+			</div>
+         </div>
+     </div>
+ </div>
+<!-- / Modal -->
+
+
+
+
+
+
+<!-- Modal -->
+ <div class="modal fade" id="myModal2" tabindex="-1" role="dialog">
+     <div class="modal-dialog">
+         <div class="modal-content">
+         	<div class="modal-header">
+                <button type="button" class="close" ng-click="dismissModal2()" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">แสดงรายชื่อผู้รับงาน 2&nbsp;&nbsp;&nbsp;
+                <small ng-show="userMoreThanTask"><i style="color: red;">จำนวนผู้รับงานมากเกินไป</i></small></h4>
+            </div>
+            <div class="modal-body">            	    	
+            	<div class="row" style="max-height: 385px; overflow-y: auto; scrollbar-arrow-color:blue; 
+            							scrollbar-face-color: #e7e7e7; scrollbar-3dlight-color: #a0a0a0; 
+            							scrollbar-darkshadow-color:#888888; margin-bottom: 10px;">
+					<div class="col-lg-6">
+						<ul class="list-group">
+						  <li class="list-group-item" ng-repeat="u in users track by $index" style="height: 33px;">
+						    <label style="width:20px; text-align: right;">{{ $index + 1 }}.</label>
+						    <label style="width:130px; padding-left: 10px;"><input type="checkbox" ng-model="u.isSelectUser"> {{ u.username }}</label>
+						    <span>{{ u.authorities[0].authority.substring(5, 6).toUpperCase() + u.authorities[0].authority.substring(5).toLowerCase().slice(1) }}</span>
+						  </li>
+						</ul>						
+					</div>
+					<div class="col-lg-6">
+						<ul class="list-group">
+						  <li class="list-group-item" ng-repeat="u in users track by $index" style="height: 33px;">
+						    <label style="width:20px; text-align: right;">{{ $index + 1 }}.</label>
+						    <label style="width:130px; padding-left: 10px;"><input type="checkbox" ng-model="u.isSelectUser"> {{ u.username }}</label>
+						    <span>{{ u.authorities[0].authority.substring(5, 6).toUpperCase() + u.authorities[0].authority.substring(5).toLowerCase().slice(1) }}</span>
+						  </li>
+						</ul>						
+					</div>
+            	</div>
+            	
+            	<div class="panel panel-default" style="margin-bottom: 0px;">
+				  <div class="panel-body">
+				   	<form class="form-inline">
+				   			<div class="col-lg-12" style="margin-bottom: 5px;">
+					   			<div class="form-group">
+					                <label class="radio-inline">
+					                    <input type="radio" name="isActive" value="true" ng-model="formData.isActive">จ่ายงาน
+					                </label>
+					                <label class="radio-inline">
+					                    <input type="radio" name="isActive" value="false" ng-model="formData.isActive">โอนงาน
+					                </label>
+			   				    </div>
+				   			</div>
+		   				    <div class="col-lg-12">
+				            	<div class="form-group">
+									<select name="column" class="form-control" ng-model="formData.methodId" ng-options="option.id as option.methodName for option in assignMethods">
+										<option value="">-- เลือกวิธีจ่ายงาน --</option>
+							  		</select>
+							    </div>
+							    <div class="form-group">
+									<select name="column" class="form-control" ng-model="formData.calColumn" ng-options="option.columnName as option.columnName for option in numColumn" ng-change="changeCalColumnEvent()">
+										<option value="">-- เลือกคอลัมน์ Balance --</option>
+							  		</select>
+						    	</div>
+					    	</div>
+				     </form>
+				  </div>
+				</div>
+            </div>
+           	<div class="modal-footer">
+           		<label class="pull-left"><input type="checkbox" ng-model="isSelectAllUsers" ng-change="selectAllUsersCheckBox()"> เลือกทั้งหมด</label>
+				<button type="button" class="btn btn-default" ng-click="dismissModal2()">ปิด</button>
                 <button type="button" class="btn btn-primary" ng-click="taskAssigningBySelected()" ng-disabled="!isOneSelected || !formData.methodId || !formData.calColumn || numColumn.length == 0">ตกลง</button>
 			</div>
          </div>
