--- a/backend/src/main/webapp/app/views/profile/main.html
+++ b/backend/src/main/webapp/app/views/profile/main.html
@@ -31,7 +31,7 @@
 									<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
 										<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
 									</span>
-									<input name="userName" class="form-control" ng-model="data.username" ng-change="existingUserErrMsg = null" required disabled>
+									<input name="userName" class="form-control" ng-model="data.username" ng-change="existingUserErrMsg = null" required>
 								</div>
 								<div class="form-group">
 									<label class="control-label">{{'profile.new_password' | translate}}</label> 
