--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -5,7 +5,8 @@
 			<div class="col-lg-6" style="position: absolute; right: 0px; top: 15px;">
 				 <div class="col-lg-12 well well-sm">
 				 	<div class="col-lg-12">
-		                                        งานว่างมี {{ noOwnerCount | number:0 }} เคส
+		                                        งานว่างมี {{ noOwnerCount | number:0 }} เคส&nbsp;&nbsp;
+					   [<code ng-repeat="u in users">{{u.showname}}: {{ userTaskCount[u.username] }} เคส<span ng-show="$index+1 != users.length">,</span></code>]
 				 	</div>
 				 	<div class="col-lg-12">
 						--
@@ -146,13 +147,16 @@
             	<div class="row" style="max-height: 385px; overflow-y: auto; scrollbar-arrow-color:blue; 
             							scrollbar-face-color: #e7e7e7; scrollbar-3dlight-color: #a0a0a0; 
             							scrollbar-darkshadow-color:#888888; margin-bottom: 10px;">
-					<div class="col-lg-12">
-						<ul class="list-group">
-						  <li class="list-group-item" ng-repeat="u in users track by $index" style="height: 33px;">
-						    <!-- <span class="badge">{{ $index + 100 }}</span> -->
+					<div class="col-lg-12 simpleDemo">
+						<ul class="list-group" dnd-list="users">
+						  <li class="list-group-item" ng-repeat="u in users" 
+						  		dnd-draggable="u"
+						        dnd-dragend="dndDragend(event)"
+						        dnd-moved="users.splice($index, 1)"
+						        dnd-effect-allowed="move" style="height: 33px;">
+						    <span class="badge" ng-style="u.authorities[0].authority == 'ROLE_SUPERVISOR' ? {'background-color': '#337AB7'} : ''">{{ userTaskCount[u.username] }}</span>
 						    <label style="width:20px; text-align: right;">{{ $index + 1 }}.</label>
-						    <label style="width:130px; padding-left: 10px;"><input type="checkbox" ng-model="u.isSelectUser"> {{ u.showname }}</label>
-						    <span>{{ u.authorities[0].authority.substring(5, 6).toUpperCase() + u.authorities[0].authority.substring(5).toLowerCase().slice(1) }}</span>
+						    <label style="padding-left: 10px;"><input type="checkbox" ng-model="u.isSelectUser"> {{ u.showname }}</label>
 						  </li>
 						</ul>						
 					</div>
@@ -173,7 +177,7 @@
 							  		</select>
 						    	</div>
 						    	<div class="form-group">
-							    	&nbsp;&nbsp;&nbsp;<code><i><u>จำนวนงานมี {{ countSelected }} เคส</u></i></code>
+							    	&nbsp;<code><i><u>จำนวนงานมี {{ countSelected | number:0 }} เคส</u></i></code>
 							    </div>
 					    	</div>
 				     </form>
@@ -181,7 +185,7 @@
 				</div>
             </div>
            	<div class="modal-footer">
-           		<label class="pull-left"><input type="checkbox" ng-model="isSelectAllUsers" ng-change="selectAllUsersCheckBox()"> เลือกทั้งหมด</label>
+           		<label class="pull-left"><input type="checkbox" ng-model="isSelectAllUsers" ng-change="selectAllUsersCheckBox()"> เลือกผู้รับทั้งหมด</label>
 				<button type="button" class="btn btn-default" ng-click="dismissModal()">ปิด</button>
                 <button type="button" class="btn btn-primary" ng-click="taskAssigningBySelected()" ng-disabled="!isOneSelected || !formData.methodId || !formData.calColumn || numColumn.length == 0">ตกลง</button>
 			</div>
@@ -223,31 +227,31 @@
             	<div class="row" style="max-height: 385px; overflow-y: auto; scrollbar-arrow-color:blue; 
             							scrollbar-face-color: #e7e7e7; scrollbar-3dlight-color: #a0a0a0; 
             							scrollbar-darkshadow-color:#888888; margin-bottom: 3px;">
-					<div class="col-lg-6 my-show-hide-animation" ng-hide="formData.taskType == 1">
+					<div class="col-lg-6 my-show-hide-animation" ng-hide="formData.taskType == 1" style="padding-right: 1.5px;">
 						<ul class="list-group">
 						  <li class="list-group-item" style="height: 33px; text-align: center;">
 						  	<label>ผู้ส่งงาน</label>
 						  </li>
-						  <li class="list-group-item" ng-repeat="u in users track by $index" style="height: 33px;">
+						  <li class="list-group-item" ng-repeat="u in transferUsers" style="height: 33px;">
+							<span class="badge" ng-style="u.authorities[0].authority == 'ROLE_SUPERVISOR' ? {'background-color': '#337AB7'} : ''">{{ userTaskCount[u.username] }}</span>
 						    <label style="width:20px; text-align: right;">{{ $index + 1 }}.</label>
-						    <label style="width:130px; padding-left: 10px;"><input type="checkbox" ng-model="u.isSelectUser"> {{ u.showname }}</label>
-						    <span>{{ u.authorities[0].authority.substring(5, 6).toUpperCase() + u.authorities[0].authority.substring(5).toLowerCase().slice(1) }}</span>
+						    <label style="padding-left: 10px;"><input type="checkbox" ng-model="u.isSelectUser"> {{ u.showname }}</label>
 						  </li>
 						</ul>						
 					</div>
-					<div class="simpleDemo my-toggle-animation" ng-class="{'col-lg-12': formData.taskType == 1, 'col-lg-6': formData.taskType == 2}">
+					<div class="simpleDemo my-toggle-animation" ng-class="{'col-lg-12': formData.taskType == 1, 'col-lg-6': formData.taskType == 2}" style="padding-left: 1.5px;">
 						<li class="list-group-item" style="height: 33px; text-align: center;">
 					  	  <label>ผู้รับงาน</label>
 					    </li>
-                    	<ul class="list-group" dnd-list="receivUsers">
-						    <li class="list-group-item" ng-repeat="u in receivUsers"
+                    	<ul class="list-group" dnd-list="users">
+						    <li class="list-group-item" ng-repeat="u in users"
 						        dnd-draggable="u"
 						        dnd-dragend="dndDragend(event)"
-						        dnd-moved="receivUsers.splice($index, 1)"
+						        dnd-moved="users.splice($index, 1)"
 						        dnd-effect-allowed="move" style="height: 33px;">
+                    			<span class="badge" ng-style="u.authorities[0].authority == 'ROLE_SUPERVISOR' ? {'background-color': '#337AB7'} : ''">{{ userTaskCount[u.username] }}</span>
 						        <label style="width:20px; text-align: right;">{{ $index + 1 }}.</label>
-							    <label style="width:130px; padding-left: 10px;"><input type="checkbox" ng-model="u.isSelectUser"> {{ u.showname }}</label>
-							    <span>{{ u.authorities[0].authority.substring(5, 6).toUpperCase() + u.authorities[0].authority.substring(5).toLowerCase().slice(1) }}</span>
+							    <label style="padding-left: 10px;"><input type="checkbox" ng-model="u.isSelectUser"> {{ u.showname }}</label>
 						    </li>
 						</ul>
 					</div>
@@ -267,12 +271,16 @@
 										<option value="">-- เลือกคอลัมน์ Balance --</option>
 							  		</select>
 						    	</div>
+						    	<div class="form-group">
+							    	&nbsp;<code><i><u>จำนวนงานมี {{ noOwnerCount | number:0 }} เคส</u></i></code>
+							    </div>
 					    	</div>
 				     </form>
 				  </div>
 				</div>
             </div>
            	<div class="modal-footer">
+           		<label class="pull-left"><input type="checkbox" ng-model="isSelectAllUsers" ng-change="selectAllUsersCheckBox()"> เลือกผู้รับทั้งหมด</label>
 				<button type="button" class="btn btn-default" ng-click="dismissModal2()">ปิด</button>
                 <button type="button" class="btn btn-primary" ng-click="taskAssigningBySelected()" ng-disabled="!isOneSelected || !formData.methodId || !formData.calColumn || numColumn.length == 0">ตกลง</button>
 			</div>
