--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -239,7 +239,7 @@
 						  </li>
 						</ul>						
 					</div>
-					<div class="simpleDemo my-toggle-animation" ng-class="{'col-lg-12': formData.taskType == 1, 'col-lg-6': formData.taskType == 2}" style="padding-left: 1.5px;">
+					<div class="simpleDemo my-toggle-animation" ng-class="{'col-lg-12': formData.taskType == 1, 'col-lg-6': formData.taskType == 2}">
 						<li class="list-group-item" style="height: 33px; text-align: center;">
 					  	  <label>ผู้รับงาน</label>
 					    </li>
