--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -6,10 +6,7 @@
 				 <div class="col-lg-12 well well-sm">
 				 	<div class="col-lg-12">
 		                                        งานว่างมี {{ noOwnerCount | number:0 }} เคส&nbsp;&nbsp;
-					   [<code ng-repeat="u in users">{{u.showname}}: {{ userTaskCount[u.username] }} เคส<span ng-show="$index+1 != users.length">,</span></code>]
-				 	</div>
-				 	<div class="col-lg-12">
-						--
+					   <!-- [<code ng-repeat="u in users">{{u.showname}}: {{ userTaskCount[u.username] }} เคส<span ng-show="$index+1 != users.length">,</span></code>] -->
 				 	</div>
                  </div>
 			</div>
