--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -1,59 +1,81 @@
 <div>
 	<div class="col-lg-6">
 		<form name="addUserForm" role="addUserForm" ng-submit="isEdit ? update() : save()" novalidate>
-			<div class="form-group" ng-class="{'has-error':addUserForm.userNameShow.$invalid || existingUserShowErrMsg}">
-				<label class="control-label">{{'user.addpage.username_show' | translate}} *</label>
-				<span class="text-danger" ng-show="existingUserShowErrMsg" style="position: absolute; right: 0px;">
-					<i class='fa fa-warning fa-fw'></i><em>{{ existingUserShowErrMsg }}</em>
-				</span>
-				<input name="userNameShow" class="form-control" ng-model="user.showname" ng-change="existingUserShowErrMsg = null" required>
+			<div class="row">
+				<div class="col-lg-6">
+					<div class="form-group" ng-class="{'has-error':addUserForm.userNameShow.$invalid || existingUserShowErrMsg}">
+						<label class="control-label">{{'user.addpage.username_show' | translate}} *</label>
+						<span class="text-danger" ng-show="existingUserShowErrMsg" style="position: absolute; right: 0px;">
+							<i class='fa fa-warning fa-fw'></i><em>{{ existingUserShowErrMsg }}</em>
+						</span>
+						<input name="userNameShow" class="form-control" ng-model="user.showname" ng-change="existingUserShowErrMsg = null" required>
+					</div>
+					<div class="form-group" ng-class="{'has-error':addUserForm.userName.$invalid || existingUserErrMsg}">
+						<label class="control-label">{{'user.addpage.username' | translate}} *</label>
+						<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
+							<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
+						</span>
+						<input name="userName" class="form-control" ng-model="user.username" ng-change="existingUserErrMsg = null" required>
+					</div>
+					<div class="form-group" ng-class="{'has-error':addUserForm.password.$invalid}">
+						<label class="control-label">{{'user.addpage.password' | translate}} *</label>
+						<input name="password" class="form-control" type="password" ng-model="user.password" ng-required="!isEdit">
+					</div>
+					<div class="form-group" ng-class="{'has-error':addUserForm.repassword.$invalid || notMatchRepassErrMsg}">
+						<label class="control-label">{{'user.addpage.re_type_password' | translate}} *</label>
+						<span class="text-danger" ng-show="notMatchRepassErrMsg" style="position: absolute; right: 0px;">
+							<i class='fa fa-warning fa-fw'></i><em>{{ notMatchRepassErrMsg }}</em>
+						</span>
+						<input name="repassword" class="form-control" type="password" ng-model="user.reTypePassword" 
+						       ng-change="notMatchRepassErrMsg = null" ng-required="!isEdit">
+					</div>
+					<div class="form-group" ng-class="{'has-error':addUserForm.roles.$invalid}">
+						<label class="control-label">{{'user.addpage.role' | translate}} *</label>
+						<select name="roles" class="form-control" ng-model="user.authorities[0].authority" ng-change="authoritySelected()" required>
+							<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
+					      	<option ng-selected="{{ user.authorities[0].authority == option.authority }}" 
+					      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
+					    </select>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="form-group" ng-class="{'has-error':addUserForm.firstName.$invalid}">
+						<label class="control-label">ชื่อ *</label>
+						<input name="firstName" class="form-control" ng-model="user.showname" required>
+					</div>
+					<div class="form-group" ng-class="{'has-error':addUserForm.lastName.$invalid}">
+						<label class="control-label">สกุล *</label>
+						<input name="lastName" class="form-control" ng-model="user.username" required>
+					</div>
+					<div class="form-group">
+						<label class="control-label">เบอร์โทร</label>
+						<input name="phoneNumber" class="form-control" ng-model="user.username">
+					</div>
+				</div>
 			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.userName.$invalid || existingUserErrMsg}">
-				<label class="control-label">{{'user.addpage.username' | translate}} *</label>
-				<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
-					<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
-				</span>
-				<input name="userName" class="form-control" ng-model="user.username" ng-change="existingUserErrMsg = null" required>
-			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.password.$invalid}">
-				<label class="control-label">{{'user.addpage.password' | translate}} *</label>
-				<input name="password" class="form-control" type="password" ng-model="user.password" ng-required="!isEdit">
-			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.repassword.$invalid || notMatchRepassErrMsg}">
-				<label class="control-label">{{'user.addpage.re_type_password' | translate}} *</label>
-				<span class="text-danger" ng-show="notMatchRepassErrMsg" style="position: absolute; right: 0px;">
-					<i class='fa fa-warning fa-fw'></i><em>{{ notMatchRepassErrMsg }}</em>
-				</span>
-				<input name="repassword" class="form-control" type="password" ng-model="user.reTypePassword" 
-				       ng-change="notMatchRepassErrMsg = null" ng-required="!isEdit">
-			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.roles.$invalid}">
-				<label class="control-label">{{'user.addpage.role' | translate}} *</label>
-				<select name="roles" class="form-control" ng-model="user.authorities[0].authority" ng-change="authoritySelected()" required>
-					<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
-			      	<option ng-selected="{{ user.authorities[0].authority == option.authority }}" 
-			      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
-			    </select>
-			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.products.$invalid}">
-				<label class="control-label">โปรดักส์ *</label>
-				<select name="products" class="form-control" ng-model="user.products" size="10" multiple 
-						ng-disabled="!isShowProducts" ng-required="isShowProducts"
-						ng-options="option.id as option.productName for option in productsSelect">
-			    </select>
-		    </div>
-			<div class="form-group">
-                 <label>{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
-                 <label class="radio-inline">
-                     <input type="radio" name="userStatus" value="true" ng-checked="user.enabled == true" ng-model="user.enabled">{{'user.addpage.status.enable' | translate}}
-                 </label>
-                 <label class="radio-inline">
-                     <input type="radio" name="userStatus" value="false" ng-checked="user.enabled == false" ng-model="user.enabled">{{'user.addpage.status.disable' | translate}}
-                 </label>
-             </div>
-			<div style="text-align: center;">
-				<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">{{'user.addpage.celar_btn' | translate}}</button>
-				<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="addUserForm.$invalid">{{ persisBtn }}</button>
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="form-group" ng-class="{'has-error':addUserForm.products.$invalid}">
+						<label class="control-label">โปรดักส์ *</label>
+						<select name="products" class="form-control" ng-model="user.products" size="10" multiple 
+								ng-disabled="!isShowProducts" ng-required="isShowProducts"
+								ng-options="option.id as option.productName for option in productsSelect">
+					    </select>
+				    </div>
+					<div class="form-group">
+		                 <label>{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
+		                 <label class="radio-inline">
+		                     <input type="radio" name="userStatus" value="true" ng-checked="user.enabled == true" ng-model="user.enabled">{{'user.addpage.status.enable' | translate}}
+		                 </label>
+		                 <label class="radio-inline">
+		                     <input type="radio" name="userStatus" value="false" ng-checked="user.enabled == false" ng-model="user.enabled">{{'user.addpage.status.disable' | translate}}
+		                 </label>
+		             </div>
+					<div style="text-align: center;">
+						<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">{{'user.addpage.celar_btn' | translate}}</button>
+						<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="addUserForm.$invalid">{{ persisBtn }}</button>
+					</div>
+				</div>
 			</div>
 		</form>
 	</div>
