--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -51,6 +51,17 @@
 						<label class="control-label">เบอร์โทร</label>
 						<input name="phoneNumber" class="form-control" ng-model="user.username">
 					</div>
+					
+					<div class="form-group" ng-class="{'has-error': addUserForm.image.$invalid}">
+						<label class="control-label">ภาพถ่ายหน้าตรง</label>
+						<code style="position: absolute; right: 15px;"><em>*ไม่เกิน 1 MB</em></code>
+						<input tabindex="9" class="form-control" id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
+						       ng-model="imgUpload" maxsize="1000" base-sixty-four-input accept=".png,.jpg,.gif" />
+						<span class="text-danger" ng-show="addUserForm.image.$error.maxsize">
+							<i class='fa fa-warning fa-fw'></i><small><em>ขนาดไฟล์เกินที่กำหนด</em></small>
+						</span>
+					</div>
+					
 				</div>
 			</div>
 			<div class="row">
@@ -79,4 +90,9 @@
 			</div>
 		</form>
 	</div>
+	
+	<div class="col-lg-6">
+		<img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" style="height: 110px;" ng-show="imageSource">
+	</div>
+	
 </div>
