--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -92,6 +92,7 @@
 	</div>
 	
 	<div class="col-lg-6">
+		--- {{ imageSource }} ---
 		<img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" style="height: 110px;" ng-show="imageSource">
 	</div>
 	
