--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -40,22 +40,22 @@
 				<div class="col-lg-6">
 					<div class="form-group" ng-class="{'has-error':addUserForm.firstName.$invalid}">
 						<label class="control-label">ชื่อ *</label>
-						<input name="firstName" class="form-control" ng-model="user.showname" required>
+						<input name="firstName" class="form-control" ng-model="user.firstName" required>
 					</div>
 					<div class="form-group" ng-class="{'has-error':addUserForm.lastName.$invalid}">
 						<label class="control-label">สกุล *</label>
-						<input name="lastName" class="form-control" ng-model="user.username" required>
+						<input name="lastName" class="form-control" ng-model="user.lastName" required>
 					</div>
 					<div class="form-group">
 						<label class="control-label">เบอร์โทร</label>
-						<input name="phoneNumber" class="form-control" ng-model="user.username">
+						<input name="phoneNumber" class="form-control" ng-model="user.phoneNumber">
 					</div>
 					
 					<div class="form-group" ng-class="{'has-error': addUserForm.image.$invalid}">
 						<label class="control-label">ภาพถ่ายหน้าตรง</label>
 						<code style="position: absolute; right: 15px;"><em>*ไม่เกิน 1 MB</em></code>
 						<input tabindex="9" class="form-control" id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
-						       ng-model="imgUpload" maxsize="1000" base-sixty-four-input accept=".png,.jpg,.gif" />
+						       ng-model="user.imgUpload" maxsize="1000" base-sixty-four-input accept=".png,.jpg,.gif" />
 						<span class="text-danger" ng-show="addUserForm.image.$error.maxsize">
 							<i class='fa fa-warning fa-fw'></i><small><em>ขนาดไฟล์เกินที่กำหนด</em></small>
 						</span>
