--- a/backend/src/main/webapp/app/views/profile/main.html
+++ b/backend/src/main/webapp/app/views/profile/main.html
@@ -12,45 +12,77 @@
                     <i class="fa fa-user fa-fw"></i> {{'profile.header_panel' | translate}}
                 </div>
                 <div class="panel-body">
-					
-					<div>
+					<form role="form" name="profileForm" ng-submit="updateProfile()">
 						<div class="col-lg-6">
-							<form role="form" name="profileForm" ng-submit="updateProfile()">
+							<div class="row">
 								<div class="form-inline" style="text-align: center;">
 									<label class="bg-success profile-label">{{'profile.role' | translate}} <i class="fa fa-caret-right fa-fw"></i> {{ data.role }}</label>
 								</div>
-								<div class="form-group" ng-class="{'has-error': profileForm.userNameShow.$invalid  || existingUserShowErrMsg}">
-									<label class="control-label">{{'profile.username_show' | translate}} *</label>
-									<span class="text-danger" ng-show="existingUserShowErrMsg" style="position: absolute; right: 0px;">
-										<i class='fa fa-warning fa-fw'></i><em>{{ existingUserShowErrMsg }}</em>
-									</span>
-									<input name="userNameShow" class="form-control" ng-model="data.usernameShow" ng-change="existingUserShowErrMsg = null" required>
+							</div>
+							<div class="row">
+								<div class="col-lg-6">
+									<div class="form-group" ng-class="{'has-error': profileForm.userNameShow.$invalid  || existingUserShowErrMsg}">
+										<label class="control-label">{{'profile.username_show' | translate}} *</label>
+										<span class="text-danger" ng-show="existingUserShowErrMsg" style="position: absolute; right: 0px;">
+											<i class='fa fa-warning fa-fw'></i><em>{{ existingUserShowErrMsg }}</em>
+										</span>
+										<input name="userNameShow" class="form-control" ng-model="data.usernameShow" ng-change="existingUserShowErrMsg = null" required>
+									</div>
+									<div class="form-group" ng-class="{'has-error': profileForm.userName.$invalid  || existingUserErrMsg}">
+										<label class="control-label">{{'profile.username' | translate}} *</label>
+										<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
+											<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
+										</span>
+										<input name="userName" class="form-control" ng-model="data.username" ng-change="existingUserErrMsg = null" required>
+									</div>
+									<div class="form-group">
+										<label class="control-label">{{'profile.new_password' | translate}}</label> 
+										<input class="form-control" type="password" ng-model="data.password">
+									</div>
+									<div class="form-group" ng-class="{'has-error':notMatchRepassErrMsg}">
+										<label class="control-label">{{'profile.re_type_new_password' | translate}}</label> 
+										<span class="text-danger" ng-show="notMatchRepassErrMsg" style="position: absolute; right: 0px;">
+											<i class='fa fa-warning fa-fw'></i><em>{{ notMatchRepassErrMsg }}</em>
+										</span>
+										<input class="form-control" type="password" ng-model="data.reTypePassword" ng-change="notMatchRepassErrMsg = null">
+									</div>
 								</div>
-								<div class="form-group" ng-class="{'has-error': profileForm.userName.$invalid  || existingUserErrMsg}">
-									<label class="control-label">{{'profile.username' | translate}} *</label>
-									<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
-										<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
-									</span>
-									<input name="userName" class="form-control" ng-model="data.username" ng-change="existingUserErrMsg = null" required>
+							
+								<div class="col-lg-6">
+									<div class="form-group">
+										<label class="control-label">ชื่อ</label>
+										<input name="firstName" class="form-control" ng-model="data.firstName">
+									</div>
+									<div class="form-group">
+										<label class="control-label">สกุล</label>
+										<input name="lastName" class="form-control" ng-model="data.lastName">
+									</div>
+									<div class="form-group">
+										<label class="control-label">เบอร์โทร</label>
+										<input name="phoneNumber" class="form-control" ng-model="data.phoneNumber">
+									</div>
+									
+									<div class="form-group" ng-class="{'has-error': profileForm.image.$invalid}">
+										<label class="control-label">ภาพถ่ายหน้าตรง</label>
+										<code style="position: absolute; right: 15px;"><em>*ไม่เกิน 1 MB</em></code>
+										<input tabindex="9" class="form-control" id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
+										       ng-model="data.imgUpload" maxsize="1000" base-sixty-four-input accept=".png,.jpg,.gif" />
+										<span class="text-danger" ng-show="profileForm.image.$error.maxsize">
+											<i class='fa fa-warning fa-fw'></i><small><em>ขนาดไฟล์เกินที่กำหนด</em></small>
+										</span>
+									</div>
 								</div>
-								<div class="form-group">
-									<label class="control-label">{{'profile.new_password' | translate}}</label> 
-									<input class="form-control" type="password" ng-model="data.password">
-								</div>
-								<div class="form-group" ng-class="{'has-error':notMatchRepassErrMsg}">
-									<label class="control-label">{{'profile.re_type_new_password' | translate}}</label> 
-									<span class="text-danger" ng-show="notMatchRepassErrMsg" style="position: absolute; right: 0px;">
-										<i class='fa fa-warning fa-fw'></i><em>{{ notMatchRepassErrMsg }}</em>
-									</span>
-									<input class="form-control" type="password" ng-model="data.reTypePassword" ng-change="notMatchRepassErrMsg = null">
-								</div>
-								<div style="text-align: center;">
+							</div>
+							<div class="row">
+								<div class="col-lg-12" style="text-align: center;">
 									<button ng-disabled="profileForm.$invalid" type="submit" class="btn btn-outline btn-primary btn-lg">{{'profile.update_btn' | translate}}</button>
 								</div>
-							</form>
+							</div>
 						</div>
-					</div>
-					
+						<div class="col-lg-2">
+							<img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" style="height: 110px; border-color: #337AB7;" ng-show="imageSource">		
+						</div>
+					</form>
                 </div>
                 <div class="panel-footer"></div>
             </div>
