--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -38,13 +38,13 @@
 					</div>
 				</div>
 				<div class="col-lg-6">
-					<div class="form-group" ng-class="{'has-error':addUserForm.firstName.$invalid}">
-						<label class="control-label">ชื่อ *</label>
-						<input name="firstName" class="form-control" ng-model="user.firstName" required>
+					<div class="form-group">
+						<label class="control-label">ชื่อ</label>
+						<input name="firstName" class="form-control" ng-model="user.firstName">
 					</div>
-					<div class="form-group" ng-class="{'has-error':addUserForm.lastName.$invalid}">
-						<label class="control-label">สกุล *</label>
-						<input name="lastName" class="form-control" ng-model="user.lastName" required>
+					<div class="form-group">
+						<label class="control-label">สกุล</label>
+						<input name="lastName" class="form-control" ng-model="user.lastName">
 					</div>
 					<div class="form-group">
 						<label class="control-label">เบอร์โทร</label>
