--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -269,7 +269,7 @@
 							  		</select>
 						    	</div>
 						    	<div class="form-group">
-							    	&nbsp;<code><i><u>จำนวนงานมี {{ taskNum | number:0 }} เคส</u></i></code>
+							    	&nbsp;<code><i><u>จำนวนงานมี {{ countSelectedDummy | number:0 }} เคส</u></i></code>
 							    </div>
 					    	</div>
 				     </form>
