--- a/backend/src/main/webapp/app/views/taskdetail/contextMenu1.html
+++ b/backend/src/main/webapp/app/views/taskdetail/contextMenu1.html
@@ -1,4 +1,4 @@
 <div class="list-group">
   <a class="list-group-item" href="" ng-click="contextMenuSelected(1)"><i class="fa fa-external-link-square fa-fw" style="color: black;"></i>&nbsp; จ่ายงาน/โอนงาน</a>
-  <a class="list-group-item" href="" ng-click="contextMenuSelected(2)"><i class="fa fa-random fa-fw"></i>&nbsp; เปิด/ปิด ใช้งาน</a>
+  <a class="list-group-item" href="" ng-click="contextMenuSelected(2)"><i class="fa fa-random fa-fw"></i>&nbsp; เปิด/ปิด การใช้งาน</a>
 </div>
