--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -79,12 +79,12 @@
 						</div>
 					</div>
 					<div class="table-responsive col-lg-12">
-						<table class="table table-striped table-hover">
+						<table class="table table-striped table-hover table-bordered">
 							<thead>
 								<tr>
-									<th>ลำดับที่</th>
-									<th ng-repeat="h in headers">
-										<a href="" ng-click="columnOrder(h.columnName)">
+									<th style="white-space: nowrap; text-align: center;">ลำดับที่</th>
+									<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
+										<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px;">
 											{{ h.columnNameAlias || h.columnName }}&nbsp;
 											<i id="{{ h.columnName }}_desc" class="fa fa-sort-desc fw" style="position: absolute; top: 12px;"></i>
 											<i id="{{ h.columnName }}_asc" class="fa fa-sort-up fw" style="position: absolute; top: 12px;"></i>
@@ -96,17 +96,10 @@
 							<tbody>
 								<tr ng-repeat="data in taskDetails track by $index" ng-class="{'comm-row-selected': data.selected}" ng-mousedown="rowSelect(data, $index, $event)" 
 								    data-context-menu="./views/taskdetail/contextMenu1.html">
-									<td style="vertical-align: middle;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
-									<td ng-repeat="h in headers" style="vertical-align: middle;">
+									<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
+									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;">
 										
-										<!-- <div class="btn-group" data-toggle="buttons" ng-show="h.dataType == 'sys_isActive'">
-										  <label class="btn" ng-class="{'btn-primary': data[h.columnName].status, 'btn-danger': !data[h.columnName].status}" ng-click="isActiveClick(data)" 
-										  	     style="padding-left: 5px; padding-right: 5px; padding-top: 0px; padding-bottom: 0px;">
-									    	<i class="fa fa-fw" ng-class="{'fa-check': data[h.columnName].status, 'fa-times': !data[h.columnName].status}"></i>
-										  </label>
-										</div> -->
-										
-										<div ng-show="h.dataType == 'sys_isActive'">
+										<div ng-show="h.dataType == 'sys_isActive'" style="text-align: center;">
 											<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="data[h.columnName].status"></i>
 											<i class="fa  fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="data[h.columnName].status"></i>
 										</div>
