--- a/backend/src/main/webapp/app/styles/main.css
+++ b/backend/src/main/webapp/app/styles/main.css
@@ -113,3 +113,20 @@ background-color: #eee;
                                   not supported by any browser */
 }
 
+/* --------------------: Scroll bar :---------------------- */
+::-webkit-scrollbar {
+    height: 12px;
+    width: 12px;
+    background: #FFFFFF;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #337AB7;
+    -webkit-border-radius: 2ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+::-webkit-scrollbar-corner {
+    background: #000;
+}
+
