--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -2,14 +2,14 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<h1 class="page-header">รายละเอียดงาน</h1>
-			<div class="col-lg-6" style="position: absolute; right: 0px; top: 15px;">
+			<!-- <div class="col-lg-6" style="position: absolute; right: 0px; top: 15px;">
 				 <div class="col-lg-12 well well-sm">
 				 	<div class="col-lg-12">
 		                                        งานว่างมี {{ noOwnerCount | number:0 }} เคส&nbsp;&nbsp;
-					   <!-- [<code ng-repeat="u in users">{{u.showname}}: {{ userTaskCount[u.username] }} เคส<span ng-show="$index+1 != users.length">,</span></code>] -->
+					   [<code ng-repeat="u in users">{{u.showname}}: {{ userTaskCount[u.username] }} เคส<span ng-show="$index+1 != users.length">,</span></code>]
 				 	</div>
                  </div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 	
@@ -53,6 +53,7 @@
 							   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 							   
 							   <div class="pull-right">
+							   	     งานว่างมี {{ noOwnerCount | number:0 }} เคส&nbsp;&nbsp;
 								  <button type="button" ng-click="showCollector2()" class="btn btn-outline btn-primary">จ่ายงาน/โอนงาน</button>
 							   </div>
 							</form>
@@ -78,7 +79,8 @@
 							</span>
 						</div>
 					</div>
-					<div class="table-responsive col-lg-12">
+					<div class="col-lg-12">
+					<div class="table-responsive col-lg-12" style="padding: 0;">
 						<table class="table table-striped table-hover table-bordered">
 							<thead>
 								<tr>
@@ -112,6 +114,7 @@
 								</tr>
 							</tbody>
 						</table>
+					</div>
 					</div>
 				</div>
                 <div class="panel-footer"></div>
